===========
 Changelog
===========

3.0.0 (unreleased)
==================

- Added a separate option, stop-timout, to control how long to wait
  for a graceful shutdown.

  Previously, this was controlled by backoff-limit, which didn't make
  much sense.


2.0.4 (2009-04-20)
==================

- Version 2.0.3 broke support for relative paths to the socket (``-s``
  option and ``socket-name`` parameter), now relative paths work again
  as in version 2.0.2.

- Fixed change log format, made table of contents nicer.

- Fixed author's email address.

- Removed zpkg stuff.


2.0.3 (2009-04-11)
==================

- Added support to bootstrap on Jython.

- If the run directory does not exist it will be created. This allow to use
  `/var/run/mydaemon` as run directory when /var/run is a tmpfs (LP #318118).

Bugs Fixed
----------

- No longer uses a hardcoded filename (/tmp/demo.zdsock) in unit tests.
  This lets you run the tests on Python 2.4 and 2.5 simultaneously without
  spurious errors.

- make -h work again for both runner and control scripts.
  Help is now taken from the __doc__ of the options class users by
  the zdaemon script being run.

2.0.2 (2008-04-05)
==================

Bugs Fixed
----------

- Fixed backwards incompatible change in handling of environment option.

2.0.1 (2007-10-31)
==================

Bugs Fixed
----------

- Fixed test renormalizer that did not work in certain cases where the
  environment was complex.

2.0.0 (2007-07-19)
==================

- Final release for 2.0.0.

2.0a6 (2007-01-11)
==================

Bugs Fixed
----------

- When the user option was used, it only affected running the daemon.

2.0a3, 2.0a4, 2.0a5 (2007-01-10)
================================

Bugs Fixed
----------

- The new (2.0) mechanism used by zdaemon to start the daemon manager
  broke some applications that extended zdaemon.

- Added extra checks to deal with programs that extend zdaemon